CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (el-mq C CXX)

SET (dependents "glib-2.0")

INCLUDE(FindPkgConfig)
PKG_CHECK_MODULES (sample_pkgs REQUIRED ${dependents})

SET (SRCS
  src/main.cpp
  src/WorkerThread.cpp
)

INCLUDE_DIRECTORIES (
  ${CMAKE_SOURCE_DIR}/src
  PRIVATE
  ${sample_pkgs_INCLUDE_DIRS}
)

SET(CMAKE_CXX_FLAGS "-pthread")

if (CMAKE_COMPILER_IS_GNUCXX)
  ADD_DEFINITIONS(-std=gnu++11)
endif()

ADD_EXECUTABLE (${PROJECT_NAME} ${SRCS})
TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${sample_pkgs_LDFLAGS} ${CMAKE_THREAD_LIBS_INIT})

